# alchemiq

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.md
docs/guide/: caching.md  clickhouse.md  custom-field-types.md  fastapi.md  getting-started.md  health.md  migrations.md  models-and-fields.md  native-columns.md  optimistic-locking.md  outbox-and-relay.md  queries.md  relationships.md  repository.md  scaffolding.md  serialization.md  signals.md  soft-delete.md  sqlite.md  unit-of-work.md  whats-not-in-v1.md
docs/reference/: caching.rst  clickhouse.rst  exceptions.rst  fastapi.rst  faststream.rst  health.rst  index.rst  migrations.rst  models.rst  outbox.rst  query.rst  repository.rst  runtime.rst
src/alchemiq/: __init__.py  cli.py  exceptions.py
src/alchemiq/_internal/: annotations.py  crypto.py  dialect.py  hashing.py  ids.py  wire.py
src/alchemiq/cache/: __init__.py  backend.py  keys.py  memory.py  ops.py  redis.py  serialize.py
src/alchemiq/clickhouse/: __init__.py  connection.py  ddl.py  engines.py  model.py  publisher.py  query.py  registry.py  repository.py  types.py
src/alchemiq/fastapi/: __init__.py  deps.py  errors.py  health.py  lifespan.py  router.py  schemas.py
src/alchemiq/faststream/: __init__.py  deps.py  lifespan.py  publisher.py
src/alchemiq/health/: __init__.py  checks.py  report.py
src/alchemiq/migrations/: __init__.py  cli.py  config.py  errors.py
src/alchemiq/model/: __init__.py  base.py  meta_options.py  pipeline.py  registry.py  relationships.py  serialization.py
src/alchemiq/outbox/: __init__.py  capture.py  message.py  models.py  publisher.py  relay.py  status.py  store.py  taskiq.py
src/alchemiq/query/: __init__.py  aggregates.py  compiler.py  cursor.py  explain.py  lookups.py  q.py  queryset.py  serialize.py  soft_delete.py
src/alchemiq/repository/: __init__.py  base.py  loading.py  pagination.py  upsert.py
src/alchemiq/runtime/: __init__.py  engine.py  post_commit.py  providers.py  session.py  soft_delete_filter.py  unit_of_work.py
src/alchemiq/scaffold/: __init__.py  cli.py  options.py  plan.py  render.py
src/alchemiq/signals/: __init__.py  registry.py
src/alchemiq/types/: __init__.py  base.py  maybe.py  numeric.py  pk.py  special.py  strings.py  temporal.py
tests/: conftest.py
tests/clickhouse/: test_buffered.py  test_connection.py  test_coverage_gaps.py  test_ddl.py  test_ddl_integration.py  test_engines.py  test_exports.py  test_health_integration.py  test_import_guard.py  test_migrations_ch_runner.py  test_model.py  test_publisher.py  test_publisher_integration.py  test_query_render.py  test_query_terminals.py  test_repository_insert.py  test_repository_reads.py  test_repository_unsupported.py  test_soft_delete.py  test_types.py
tests/integration/: _migration_models.py  test_aggregate.py  test_bulk_upsert.py  test_cache_invalidation.py  test_cache_reads.py  test_cache_redis_e2e.py  test_cursor_paginate.py  test_ddl_roundtrip.py  test_explain.py  test_fastapi_cursor.py  test_fastapi_end_to_end.py  test_fastapi_lifespan.py  test_fastapi_router_read.py  test_fastapi_router_write.py  test_faststream_end_to_end.py  test_health_integration.py  test_health_routes_e2e.py  test_mass_ops.py  test_migrations_cli_e2e.py  test_migrations_pg.py  test_native_interop.py  test_native_relationship.py  test_optimistic_lock.py  test_outbox_atomicity.py  test_outbox_capture.py  test_outbox_publish.py  test_outbox_relay.py  test_outbox_relay_concurrency.py  test_outbox_relay_failures.py  test_paginate.py  test_post_commit_timing.py  test_queries.py  test_queryset_get.py  test_queryset_terminals.py  test_relation_not_loaded.py  test_relationships_m2m.py  test_relationships_o2o.py  test_repository_read.py  test_repository_upsert.py  test_repository_write.py  (+11 more)
tests/sqlite/: _mig_models_v1.py  _mig_models_v2.py  _models.py  conftest.py  test_bulk_upsert.py  test_core.py  test_engine.py  test_lifecycle.py  test_migrations_sqlite.py  test_outbox_relay.py  test_refusals.py  test_relationships.py  test_types_roundtrip.py
tests/typing/: models.py  pyrightconfig.json  test_typing_acceptance.py
tests/unit/: _cache_models.py  test_aggregates.py  test_annotations.py  test_cache_backend.py  test_cache_import_isolation.py  test_cache_keys.py  test_cache_ops.py  test_cache_queryset.py  test_cache_repository.py  test_cache_serialize.py  test_cli_dispatch.py  test_compile_q.py  test_compile_traversal.py  test_cursor.py  test_dialect.py  test_engine_config.py  test_engine_dsn.py  test_exceptions.py  test_explain.py  test_fastapi_deps.py  test_fastapi_errors.py  test_fastapi_import_isolation.py  test_fastapi_public_surface.py  test_fastapi_router_config.py  test_fastapi_schemas.py  test_faststream_import_isolation.py  test_faststream_lifespan.py  test_faststream_public_surface.py  test_faststream_publisher.py  test_field_base.py  test_field_descriptor.py  test_health_check.py  test_health_import_isolation.py  test_health_public_api.py  test_health_report.py  test_health_routes.py  test_loading_options.py  test_lookups.py  test_mapping.py  test_mass_ops_traversal.py  (+73 more)
(+42 files in other folders)
