[project]
name = "alchemiq"
version = "0.1.0"
description = "The data layer for async FastAPI microservices: Django-style models, transactional outbox, caching, and ClickHouse - built on SQLAlchemy 2.0"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Trifonov Nikita", email = "trifonov.nikit@gmail.com" }]
keywords = ["sqlalchemy", "orm", "async", "postgresql", "fastapi", "clickhouse", "django-orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
email = ["email-validator>=2.0"]
phone = ["phonenumbers>=8.13"]
argon2 = ["argon2-cffi>=23.0"]
bcrypt = ["bcrypt>=4.0"]
crypto = ["cryptography>=42.0"]
outbox = ["taskiq>=0.11", "taskiq-aio-pika>=0.4"]
fastapi = ["fastapi>=0.110"]
faststream = ["faststream>=0.5"]
redis = ["redis>=5.0"]
postgres = ["asyncpg>=0.29"]
sqlite = ["aiosqlite>=0.20"]
clickhouse = ["clickhouse-connect[async]>=0.8", "clickhouse-sqlalchemy>=0.3"]
migrations = ["alembic>=1.13"]
all = [
    "alchemiq[email,phone,argon2,crypto,outbox,fastapi,faststream,redis,postgres,sqlite,clickhouse,migrations]",
]

[project.scripts]
alchemiq = "alchemiq.cli:main"

[project.urls]
Homepage = "https://github.com/TrifoN-off/alchemiq"
Documentation = "https://alchemiq.readthedocs.io"
Repository = "https://github.com/TrifoN-off/alchemiq"
Issues = "https://github.com/TrifoN-off/alchemiq/issues"
Changelog = "https://github.com/TrifoN-off/alchemiq/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "testcontainers>=4.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "ruff>=0.6",
    "pytest-cov>=5.0",
    "ty>=0.0.52",
    "mypy>=1.11",
    "pyright>=1.1.380",
    "httpx>=0.27",
    "redis>=5.0",
    "clickhouse-connect>=0.8",
    "clickhouse-sqlalchemy>=0.3",
    "alembic>=1.13",
    "python-semantic-release>=9",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "myst-parser>=4.0",
    "sphinx-copybutton>=0.5",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alchemiq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: no DB",
    "integration: requires PostgreSQL",
    "clickhouse: requires ClickHouse",
    "sqlite: requires SQLite (aiosqlite, no server)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D105", "D107", "D401"]  # magic methods + __init__ (class-level); D401: reST/SQLAlchemy summaries are noun phrases, not imperative

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/alchemiq/_internal/**" = ["D"]

[tool.ty.environment]
python-version = "3.12"  # type-check against the minimum supported version

# Type-check the library source plus the consumer typing fixture. The fixture
# (tests/typing/) is the executable proof that annotation-first model fields type-check
# cleanly for library consumers (SP11.2). The remaining tests/ tree is intentionally out
# of ty's first-party scope: it carries unrelated test-code typing debt (Optional-narrowing
# after .get(), mock attributes, dynamic __alchemiq_fields__ access) tracked as a separate
# hardening follow-up.
[tool.ty.src]
include = ["src", "tests/typing"]

[tool.ty.rules]
# Optional-extra imports (cryptography, phonenumbers) carry `# ty: ignore[unresolved-import]`
# so the library type-checks whether or not the extra is installed. That makes the directive
# "unused" when the extra IS present - don't fail on it.
unused-ignore-comment = "ignore"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/alchemiq/__init__.py:__version__"]
major_on_zero = false
# Explicit: the default flips between PSR v9 (true) and v10 (false); unset, the
# v10 CLI would jump 0.1.0 straight to 1.0.0.
allow_zero_version = true
# Runs inside the PSR Docker action (python:3.13-bookworm) - uv is NOT available
# there, so build with the stdlib-installable `build` frontend.
build_command = "python -m pip install build && python -m build"
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog]
# "update" + the flag below keep the hand-written release notes in CHANGELOG.md:
# PSR inserts each new release section above the flag and never rewrites the rest.
# (The default mode would regenerate the whole file.)
mode = "update"
insertion_flag = "<!-- PSR inserts new releases above this line -->"

[tool.coverage.run]
omit = ["*.mako", "*/script.py.mako", "*_script_py_mako"]

[tool.coverage.report]
omit = ["*.mako", "*/script.py.mako", "*_script_py_mako"]
